# somars

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  REFACTORING_PLAN.md  notes.md
docs/: channels.json
locales/en/: main.ftl
locales/ru/: main.ftl
src/: action.rs  alt.rs  app.rs  audio_monitor.rs  config.rs  control.rs  control_tests.rs  error.rs  event.rs  i18n.rs  keyboard.rs  logging.rs  macos_runtime.rs  main.rs  mp3_stream_decoder.rs  mpris.rs  station.rs  tui.rs  ui.rs  utils.rs  utils_tests.rs
src/audio/: icy_reader.rs  manager.rs  metadata.rs  mod.rs  playback.rs  recovery.rs  stream.rs  types.rs
src/components/: bottom_controls.rs  help.rs  history.rs  mod.rs  now_playing.rs  station_list.rs
src/media_session/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
