[package]
name = "somars"
version = "0.1.0"
edition = "2021"
authors = ["Max Vasiliev <max@vasiliev.me>"]
description = "A rusty soma.fm player"
license = "MIT"                                    # Optional, choose appropriate license
# repository = "https://github.com/yourusername/somars"  # Optional

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
futures = "0.3"
futures-util = "0.3"
ratatui = "0.29.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
rodio = { version = "0.17", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
textwrap = "0.16"
stream-download = { version = "0.14.1", features = [
    "reqwest-native-tls",
    "async-read",
] }
url = "2.5.4"
minimp3 = "0.5.1"
icy-metadata = { version = "0.2.1", features = ["serde", "reqwest"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
