[package]
name = "somars"
version = "0.1.3"
edition = "2021"
authors = ["Max Vasiliev <max@vasiliev.me>"]
description = "A rusty soma.fm player"
license = "MIT"
homepage = "https://github.com/skammer/somars"
repository = "https://github.com/skammer/somars"
readme = "README.md"
keywords = ["player", "tui", "somafm"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.29"
futures = "0.3"
futures-util = "0.3"
ratatui = "0.29.0"
reqwest = { version = "0.12.26", features = ["json", "stream"] }
rodio = { version = "0.17", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.146"
tokio = { version = "1.0", features = ["full", "net"] }
chrono = "0.4"
textwrap = "0.16"
stream-download = { version = "0.22.9", features = [
    "reqwest-native-tls",
    "async-read",
] }
url = "2.5.4"
minimp3 = "0.6.1"
icy-metadata = { version = "0.5.1", features = ["serde", "reqwest"] }
fluent = "0.17.0"
fluent-bundle = "0.16.0"
fluent-langneg = "0.14.2"
unic-langid = { version = "0.9.1", features = ["macros"] }
once_cell = "1.18.0"
thiserror = "2.0.17"
toml = "0.9.10"
dirs = "6.0"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
