[package]
name = "somars"
version = "0.2.0"
edition = "2021"
authors = ["Max Vasiliev <max@vasiliev.me>"]
description = "A rusty soma.fm player"
license = "MIT"
homepage = "https://github.com/skammer/somars"
repository = "https://github.com/skammer/somars"
readme = "README.md"
keywords = ["player", "tui", "somafm"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6"        # Better error handling for migration
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
futures-util = "0.3"
ratatui = "0.29.0"
reqwest = { version = "0.12.26", features = ["json", "stream"] }
rodio = { version = "0.21.1", features = ["symphonia-all", "playback"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.146"
strum = "0.26"            # Enum derives for Action
strum_macros = "0.26"
tokio = { version = "1.0", features = ["full", "net"] }
tokio-util = "0.7"       # CancellationToken (no features needed)
chrono = "0.4"
textwrap = "0.16"
stream-download = { version = "0.22.9", features = [
    "reqwest-native-tls",
    "async-read",
] }
url = "2.5.4"
icy-metadata = { version = "0.5.1", features = ["serde", "reqwest"] }
fluent = "0.17.0"
fluent-bundle = "0.16.0"
fluent-langneg = "0.14.2"
unic-langid = { version = "0.9.1", features = ["macros"] }
once_cell = "1.18.0"
thiserror = "2.0.17"
toml = "0.9.10"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = { version = "0.10.0", features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
# 0.4.3 allows incompatible apple-cf releases; 0.2.1 keeps the compatible range.
mediaplayer = "=0.2.1"
dispatch = "0.2.0"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSApplication",
    "NSEvent",
    "NSGraphicsContext",
    "NSResponder",
    "NSRunningApplication",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSGeometry",
] }

[target.'cfg(target_os = "windows")'.dependencies]
souvlaki = { version = "0.8.3", default-features = false }
windows = { version = "0.44", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
# Compile and test the Linux MPRIS implementation on non-Linux development hosts.
mpris-server = { version = "0.10.0", features = ["tokio"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 3       # Optimize runtime performance
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
